06-june-built-scroll-app

--- a/src/components/8_light_dark_mode/style.css
+++ b/src/components/8_light_dark_mode/style.css
@@ -2,8 +2,8 @@
 .ld-main{
   width: 100vw;
   height: 100vh;
-  background-color: white;
-  color: black; 
+  /* background-color: white;
+  color: black;  */
   display: grid;
   place-items: center;
   justify-content: center;
