--- a/src/components/12_GithubFinder/style.css
+++ b/src/components/12_GithubFinder/style.css
@@ -1,16 +1,39 @@
 
   .gf-main{
  width: 100%;
- margin-top: 30px;
+ height: 100vh;
+ padding-top: 30px;
+ background-color: #F1E5D1;
   }
   .gf-search-container{
    display: flex;
    justify-content: center;
    gap: 10px;
+   margin: 0px 10px;
+  }
+
+  .gf-input{
+    border : 3px solid #987070;
+    background-color: #E8D8C4;
+    color: #561C24;
+    font-weight: 600;
+    font-size: 1.2rem;
+  width: 300px;
   }
   
-  .gf-search-container input{
-    width: 300px;
+  
+
+  .gf-input::placeholder{
+    color: #561C24;
+  
+  }
+
+  .gf-button{
+    background-color: #6D2932;
+    font-size: 1.1rem;
+  }
+  .gf-button:hover{
+  background-color: #561C24 !important;
   }
 
 
@@ -21,9 +44,10 @@
   }
   
   .gf-user-main{
-  border: 2px solid black;
+    background-color: #C7B7A3;
+   padding: 10px;
 width: 650px;
-height: 450px;
+height: 500px;
 margin: 0px auto;
 }
 
@@ -32,6 +56,8 @@ width: 100%;
  display: flex;
  justify-content: center;
  margin-top: 20px;
+ margin-bottom: 5px;
+
 }
 
 .gf-user-image{
@@ -48,9 +74,32 @@ text-align: center;
 }
 
 .user-span{
-  font-weight: 500;
+  font-weight: 600;
+  font-size: 1.2rem;
+color: #6D2932;
+  }
+  .gf-user{
+    font-size: 1.3rem;
+    color: #561C24;
+  font-weight: 650;
+
 }
 
 
+@media (max-width : 700px){
+  .gf-user-main{
+  
+width: 95%;
 
+}
+.gf-user-image{
+  width: 150px;
+  margin-bottom: 5px;
+}
+}
 
+.gf-heading{
+  text-align: center;
+  color: #561C24;
+  padding-bottom: 10px;
+}
